--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -2,6 +2,6 @@
 {% from 'macros.html' import navbar %}
 
 {% block main %}
-  {{ navbar('/dos', user) }}
-  <h2 class="text-center">Página DOS. Usuario: {{user.email}}</h2>
+  {{ navbar('/lets_play', user) }}
+  <h2 class="text-center">Hi !. {{user.email}}</h2>
 {% endblock %}
