--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login - Register</title>
+    <title>Tivia Test</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="/style.css">
   </head>
