--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -4,4 +4,13 @@
 {% block main %}
   {{ navbar('/lets_play', user) }}
   <h2 class="text-center">Hi !. {{user.email}}</h2>
+  <div class="container">
+    <h3>{{ datos.pregunta }}</h3>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+      <label class="form-check-label" for="flexRadioDefault1">
+        Default radio
+      </label>
+    </div>
+  </div>
 {% endblock %}
