--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -2,15 +2,57 @@
 {% from 'macros.html' import navbar %}
 
 {% block main %}
-  {{ navbar('/lets_play', user) }}
-  <h2 class="text-center">Hi !. {{user.email}}</h2>
-  <div class="container">
-    <h3>{{ datos.pregunta }}</h3>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-      <label class="form-check-label" for="flexRadioDefault1">
-        Default radio
-      </label>
+{{ navbar('/lets_play', user) }}
+<h5 class="mt-4">Hi !. {{user.name}}</h5>
+<h6>Choose an answer for each of the questions and submit the test once done.</h6>
+<h5>Good luck!</h5>
+<div class="container-fluid">
+  {% for dato in datos%}
+  <form action="" class="border border-dark mb-3">
+    <div class="m-3">
+      <h6>{{ dato.id }}. {{ dato.pregunta }}</h6>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          {{ dato.respuesta_correcta }}
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          {{ dato.respuesta_falsa1 }}
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          {{ dato.respuesta_falsa2 }}
+        </label>
+      </div>
+      {% if dato.respuesta_falsa3 %}
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          {{ dato.respuesta_falsa3 }}
+        </label>
+      </div>
+      {%endif%}
+
+      {% if dato.respuesta_falsa4 %}
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <label class="form-check-label" for="flexRadioDefault1">
+          {{ dato.respuesta_falsa4 }}
+        </label>
+      </div>
+      {%endif%}
     </div>
+  </form>
+  {%endfor%}
+  <div class="mt-3 float-end">
+    <button>Cancel</button>
+    <button>Submit</button>
   </div>
+
+</div>
 {% endblock %}
