--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
       </thead>
       <tbody>
         <tr>
-          <td>Mark</td>
-          <td>Otto</td>
+          <td>{{user.name}}</td>
+          <td>{{resultado}}</td>
           <td>@mdo</td>
         </tr>
         <tr>
