--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
 {{ navbar('/', user) }}
 <!-- <h2 class="text-center">Hola {{ user.name }}</h2> -->
 <div class="container">
+
+  <div class="text-center mt-3 border border-dark text-white bg-success jugada_usuario" >
+    <h2>{{jugadas[jugadas.length-1].user_id}}</h2>
+    <h2>Genial {{jugadas[jugadas.length-1].name}} - {{jugadas[jugadas.length-1].score}}/3 - {{jugadas[jugadas.length-1].percentage}}%</h2>
+  </div>
   <div class="row mt-5">
     <div class=" border border-dark col-md-5 offset-md-3 text-center p-3 bg-secondary bg-opacity-50 fs-6">
       <a href="/lets_play" class=" btn btn-primary shadow-lg">Play!</a>
@@ -32,21 +37,26 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>{{user.name}}</td>
-          <td>{{resultado}}</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
+        {% for jugada in jugadas %}
+          <tr>
+            <!-- <td>{{jugadas.name}}</td> -->
+            <td>{{jugada.name}}</td>
+            <td>{{jugada.score}}/3</td>
+            <td>{{jugada.percentage}}%</td>
+          </tr>
+        {%endfor%}
       </tbody>
     </table>
   </div>
 </div>
-<div>
-  <table></table>
-</div>
+
+<script>
+  const div_verde = document.querySelector('.jugada_usuario')
+  // for(let i=0;i<)
+
+  if (div_verde.innerHTML == 'true') {
+    // const bton_add = document.querySelector('.btn_add')
+    div_verde.removeAttribute('hidden')
+  }
+</script>
 {% endblock %}
