--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -7,25 +7,25 @@
 <h6>Choose an answer for each of the questions and submit the test once done.</h6>
 <h5>Good luck!</h5>
 <div class="container-fluid">
-  <form action="/respuestas" method="post" class="border border-dark mb-3">
+
+  <form action="/lets_play" method="post" class="mb-3">
     {% for dato in datos %} 
-      <div class="m-3">
+      <div class="border border-dark p-3 mb-3">
         <input name="id" value="{{ dato.id }}" hidden >
         <h6>{{ dato.pregunta }} </h6>
         {% set indice=loop.index %}
 
         {% for respuesta in dato.respuestas %}
-        <div class="form-check">
-          <input class="form-check-input" type="radio" value="{{respuesta.value}}" name="pregunta{{ indice }}" >
-          <label class="form-check-label" for="flexRadioDefault1">
-            {{ respuesta.text }} 
-          </label>
-              
-        </div>
+          {% if respuesta.text %}
+            <div class="form-check">
+              <input class="form-check-input" type="radio" value="{{respuesta.value}}" name="pregunta{{ indice }}" >
+              <label class="form-check-label" for="flexRadioDefault1">{{ respuesta.text }}</label>                  
+            </div>
+          {% endif %}
         {%endfor%}
       </div>
     {%endfor%}
-    <div class="mt-3 float-end">
+    <div class="mt-3 mb-3 float-end">
       <button>Cancel</button>
       <button>Submit</button>
     </div>
