--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -16,10 +16,11 @@
   <div class="row">
     <div class="col-12 ">
       <h3 class="text-center text-primary">New Question</h3>
-      <form action="/new_question" method="post" class="rounded bg-success bg-opacity-25 mt-4 p-4 text-dark">
+      <form action="/new_question" method="post" class="rounded bg-success bg-opacity-25 mt-4 p-5 text-dark">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Question</label>
-          <input type="text" class="form-control" name="pregunta" required>
+          <textarea name="pregunta" id="" cols="134" rows="3" required></textarea>
+          <!-- <input type="text" class="form-control" name="pregunta" required> -->
         </div>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Correct Answer</label>
