avances en evaluacion-8

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
       {% endblock  %}
     </div>
     <footer class="row mt-4">
-      <div class="col-4 offset-4">
-        Footer de nuestro sitio
+      <div class="col-12 md-6 mt-5">
+        <p class="text-center"> Proyecto Trivia modulo 8, creado por Gregory Cortez, Mónica Cofré y Mauricio Vera </p>        
       </div>
     </footer>
     <script src="js/bootstrap.min.js"></script>
