--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -1,35 +1,35 @@
 {% extends 'base.html' %}
 {% from 'macros.html' import navbar %}
-
 {% block main %}
 {{ navbar('/lets_play', user) }}
 <h5 class="mt-4">Hi !. {{user.name}}</h5>
 <h6>Choose an answer for each of the questions and submit the test once done.</h6>
-<h5>Good luck!</h5>
+<h5 class="mb-3">Good luck!</h5>
 <div class="container-fluid">
 
   <form action="/lets_play" method="post" class="mb-3">
-    {% for dato in datos %} 
-      <div class="border border-dark p-3 mb-3">
-        <input name="id" value="{{ dato.id }}" hidden >
-        <h6>{{ dato.pregunta }} </h6>
-        {% set indice=loop.index %}
-
-        {% for respuesta in dato.respuestas %}
-          {% if respuesta.text %}
-            <div class="form-check">
-              <input class="form-check-input" type="radio" value="{{respuesta.value}}" name="pregunta{{ indice }}" >
-              <label class="form-check-label" for="flexRadioDefault1">{{ respuesta.text }}</label>                  
-            </div>
-          {% endif %}
-        {%endfor%}
+    {% for dato in datos %}
+    <div class="border border-dark p-3 mb-3">
+      <input name="id" value="{{ dato.id }}" hidden>
+      {% set indice=loop.index %}
+      <h6> {{ indice }}. <span class="m-2 ">{{ dato.pregunta }} </span></h6>
+      
+      {% for respuesta in dato.respuestas %}
+      {% if respuesta.text %}
+      <div class="form-check">
+        <input class="form-check-input" type="radio" value="{{respuesta.value}}" name="pregunta{{ indice }}">
+        <label class="form-check-label" for="flexRadioDefault1">{{ respuesta.text }}</label>
       </div>
+      {% endif %}
+      {%endfor%}
+    </div>
     {%endfor%}
+    <input name="info_div" value="{{indice}}" hidden>
     <div class="mt-3 mb-3 float-end">
-      <button>Cancel</button>
-      <button>Submit</button>
+      <button >Cancel</button>
+      <button class="ms-2" >Submit</button>
     </div>
   </form>
-
 </div>
+
 {% endblock %}
