--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 {{ navbar('/dos', user) }}
-<!-- <h2 class="text-center">Página DOS. Usuario: {{user.email}}</h2> -->
+
 <div class="container">
   {% for error in messages.errors %}
   <div class="alert alert-danger d-flex align-items-center" role="alert">
@@ -14,39 +14,39 @@
   </div>
   {% endfor %}
   <div class="row">
-    <div class="col-12 ">
-      <h3 class="text-center text-primary">New Question</h3>
-      <form action="/new_question" method="post" class="rounded bg-success bg-opacity-25 mt-4 p-5 text-dark">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Question</label>
-          <textarea name="pregunta" id="" cols="134" rows="3" required></textarea>
-          <!-- <input type="text" class="form-control" name="pregunta" required> -->
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Correct Answer</label>
-          <input type="text" class="form-control" name="respuesta_correcta" required>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fake Answer1</label>
-          <input type="text" class="form-control" name="respuesta_falsa1" required>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fake Answer2</label>
-          <input type="text" class="form-control" name="respuesta_falsa2" required>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fake Answer3</label>
-          <input type="text" class="form-control" name="respuesta_falsa3">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Fake Answer4</label>
-          <input type="text" class="form-control" name="respuesta_falsa4">
-        </div>
-        <div class="col-4 offset-md-8 text">
-          <button type="submit" class="btn btn-outline-primary">Cancel</button>
-          <button type="submit" class="btn btn-outline-primary">Add Question</button>
-        </div>
-      </form>
+    <div class="col-8 offset-2">
+      <h3 class="text-center text-primary mt-5">New Question</h3>      
+        <form action="/new_question" method="post" class="rounded p-3 text-dark">
+          <div class="mb-3 ">
+            <label for="exampleInputEmail1" class="form-label">Question</label>
+            <textarea class="form-control" name="pregunta"  rows="3" required></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Correct Answer</label>
+            <input type="text" class="form-control" name="respuesta_correcta" required>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Fake Answer1</label>
+            <input type="text" class="form-control" name="respuesta_falsa1" required>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Fake Answer2</label>
+            <input type="text" class="form-control" name="respuesta_falsa2" required>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Fake Answer3</label>
+            <input type="text" class="form-control" name="respuesta_falsa3">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Fake Answer4</label>
+            <input type="text" class="form-control" name="respuesta_falsa4">
+          </div>
+          <div class="col-4 offset-md-8 text">
+            <button type="submit" class="btn btn-outline-primary">Cancel</button>
+            <button type="submit" class="btn btn-outline-primary">Add Question</button>
+          </div>
+        </form>
+      
     </div>
   </div>
 </div>
