search colores resp orden jugadas

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,15 +14,10 @@
       {% endblock  %}
     </div>
     <footer class="row mt-4">
-      <div class="col-12 md-6 mt-5">
-        <p class="text-center"> Proyecto Trivia modulo 8, creado por Gregory Cortez, Mónica Cofré y Mauricio Vera </p>        
+      <div class="col-12 md-12 mt-5">
+        <p class="text-center bg-dark text-white"> Project Trivia module 8, created by Gregory Cortez, Mónica Cofré & Mauricio Vera </p>        
       </div>
     </footer>
     <script src="js/bootstrap.min.js"></script>
-    {% block scripts %}
-      <script>
-        console.log('Esto viene del template base');
-      </script>
-    {% endblock %}
   </body>
 </html>
