--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,21 @@
 {% block main %}
 {{ navbar('/', user) }}
 <div class="container">
-  <p id="info"> {{info_div}}</p>
-  <!-- HIDDEN -->
-  <div class="text-center mt-3 border border-dark border-3 text-white bg-success bg-opacity-50" id= "jugada_usuario" >
-    <h2>That was great, {{jugadas[jugadas.length-1].name}}!  Your score is {{jugadas[jugadas.length-1].score}}/3  ({{jugadas[jugadas.length-1].percentage}}%).</h2>
-  </div>
+  {% if user.play %}
+    {% if jugadas[0].score == 3 %}
+      <div class="text-center mt-3 border border-dark border-3 text-white bg-success bg-opacity-50" id= "jugada_usuario" >
+        <h2>That was great, {{jugadas[0].name}}!  Your score is {{jugadas[0].score}}/3  ({{jugadas[0].percentage}}%).</h2>
+      </div>
+    {% elif jugadas[0].score == 0 %}
+      <div class="text-center mt-3 border border-dark border-3 text-white bg-danger bg-opacity-50" id= "jugada_usuario" >
+        <h2>Aaaagh, {{jugadas[0].name}}!  Your score is {{jugadas[0].score}}/3  ({{jugadas[0].percentage}}%) try again.</h2>
+      </div>
+    {% else %}
+      <div class="text-center mt-3 border border-dark border-3 text-white bg-warning bg-opacity-50" id= "jugada_usuario" >
+        <h2>That was fine, {{jugadas[0].name}}!  Your score is {{jugadas[0].score}}/3  ({{jugadas[0].percentage}}%).</h2>
+      </div>
+    {% endif %}
+  {% endif %}
   <div class="row mt-5 ">
     <div class=" border border-3 border-dark col-md-5 offset-md-3 text-center p-3 bg-secondary bg-opacity-25 fs-6">
       <a href="/lets_play" class=" btn btn-primary shadow mb-3" >Play!</a>
@@ -16,18 +26,20 @@
     </div>
   </div>
   <div class="row mt-5">
-    <div class="col-4 offset-md-6">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <div class="col-12">
+
+      <form method="post" action="/search" class="d-flex justify-content-end" role="search">
+        <input class="form-control me-2 w-50" type="search" placeholder="all" aria-label="Search" name="nombre">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
+
   </div>
 </div>
 <div class="row">
-  <div class="col-12 border border-3 border-dark mt-4">
+  <div class="col-12 border border-3 border-dark mt-4 "  style="height: 600px;overflow: scroll;">
     <table class="table table-striped ">
-      <thead>
+      <thead class="sticky-top bg-dark text-white">
         <tr>
           <th scope="col">Name</th>
           <th scope="col">Score</th>
@@ -46,21 +58,6 @@
     </table>
   </div>
 </div>
-<script>
-//console.log('index index index', info_div)
-  function div (){ // aparecer verde
-  let div_verde = document.querySelector('#jugada_usuario')    
-  div_verde.removeAttribute('hidden')
-}
-const info_div= document.querySelector('#info')
-console.log('probando ando ando', info_div.innerHTML)
-  if(info_div.innerHTML != 'false'){
-    console.log('no es falsooooooooo')    
-  } 
-  else{
-    div()
-  }
 
-</script>
 
 {% endblock %}
