--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -16,6 +16,7 @@
   <div class="row">
     <div class="col-8 offset-2">
       <h3 class="text-center text-primary mt-5">New Question</h3>      
+      
         <form action="/new_question" method="post" class="rounded p-3 text-dark">
           <div class="mb-3 ">
             <label for="exampleInputEmail1" class="form-label">Question</label>
@@ -41,9 +42,9 @@
             <label for="exampleInputPassword1" class="form-label">Fake Answer4</label>
             <input type="text" class="form-control" name="respuesta_falsa4">
           </div>
-          <div class="col-4 offset-md-8 text">
-            <button type="submit" class="btn btn-outline-primary">Cancel</button>
-            <button type="submit" class="btn btn-outline-primary">Add Question</button>
+          <div class="d-flex justify-content-end">
+            <a href="/" id="cancel" name="cancel" class="btn btn-outline-primary">Cancel</a>
+            <button type="submit" class="ms-3 btn btn-outline-primary">Add Question</button>
           </div>
         </form>
       
