--- a/templates/login.html
+++ b/templates/login.html
@@ -25,22 +25,18 @@
     {% endfor %}
     <div class="row">
       <div class="col-12 col-md-4 offset-md-4">
-        <h3 class="text-center text-primary">Logueate</h3>
-        <form action="/login" method="post" class="bg-secondary mt-4 p-4 text-white">
+        <h3 class="text-center text-primary mt-5">Log in</h3>
+        <form action="/login" method="post" class="bg-secondary bg-opacity-50 mt-4 p-4 text-white">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
             <input type="email" class="form-control" name="email" required>
           </div>
-          <div class="mb-3">
+          <div class="mb-3 mb-4">
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" name="password" required>
           </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
-          <p><a href="/register" class="auth-text">Registrarse</a></p>
+          <button type="submit" class="btn btn-primary float-end">Ok</button>
+          <p><a href="/register" class="auth-text text-primary">Register</a></p>
         </form>
       </div>
     </div>
