--- a/templates/register.html
+++ b/templates/register.html
@@ -25,10 +25,10 @@
     {% endfor %}
     <div class="row">
       <div class="col-12 col-md-4 offset-md-4">
-        <h3 class="text-center text-primary">Registrate</h3>
-        <form action="/register" method="post" class="bg-secondary mt-4 p-4 text-white">
+        <h3 class="text-center text-primary mt-5">Register</h3>
+        <form action="/register" method="post" class="bg-secondary bg-opacity-50 mt-4 p-4 text-white">
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Nombre</label>
+            <label for="exampleInputEmail1" class="form-label">Name</label>
             <input type="text" class="form-control" name="name" required>
           </div>
           <div class="mb-3">
@@ -36,19 +36,15 @@
             <input type="email" class="form-control" name="email" required>
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+            <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" name="password" required>
           </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Repetir Contraseña</label>
+          <div class="mb-3 mb-4">
+            <label for="exampleInputPassword1" class="form-label">Repeat Password </label>
             <input type="password" class="form-control" name="password_repeat" required>
           </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
-          <p><a href="/login" class="auth-text">Ingresar</a></p>
+          <button type="submit" class="btn btn-primary float-end">Ok</button>
+          <p><a href="/login" class="auth-text text-primary">Enter</a></p>
         </form>
       </div>
     </div>
