--- a/templates/macros.html
+++ b/templates/macros.html
@@ -16,7 +16,7 @@
       </ul>
       <form class="d-flex" role="search">
         <p class="text-white me-4">{{ user.name }}</p>
-        <p class="usuario text-white me-4" hidden>{{ user.isadmin}}</p>
+        <p class="usuario text-white me-4" hidden>{{ user.is_admin}}</p>
 
         <a href="/logout" class="btn btn-outline-danger" type="submit">Logout</a>
       </form>
