--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
             <input type="password" class="form-control" name="password_repeat" required>
           </div>
           <button type="submit" class="btn btn-primary float-end">Ok</button>
-          <p><a href="/login" class="auth-text text-primary">Enter</a></p>
+          <p><a href="/login" class="auth-text text-primary">Login</a></p>
         </form>
       </div>
     </div>
