--- a/templates/lets_play.html
+++ b/templates/lets_play.html
@@ -8,17 +8,17 @@
 <div class="container-fluid">
 
   <form action="/lets_play" method="post" class="mb-3 row">
-    {% for dato in datos %}
+    {% for item in dat %}
     <div class="border border-dark p-3 mb-3">
-      <input name="id" value="{{ dato.id }}" hidden>
+      <input name="id" value="{{ item.id }}" hidden>
       {% set indice=loop.index %}
-      <h6> {{ indice }}. <span class="m-2 ">{{ dato.pregunta }} </span></h6>
+      <h6> {{ indice }}. <span class="m-2 ">{{ item.question }} </span></h6>
 
-      {% for respuesta in dato.respuestas %}
-      {% if respuesta.text %}
+      {% for answer in item.answers %}
+      {% if answer.text %}
       <div class="form-check">
-        <input class="form-check-input" type="radio" value="{{respuesta.value}}" name="pregunta{{ indice }}">
-        <label class="form-check-label" for="flexRadioDefault1">{{ respuesta.text }}</label>
+        <input class="form-check-input" type="radio" value="{{answer.value}}" name="question{{ indice }}">
+        <label class="form-check-label" for="flexRadioDefault1">{{ answer.text }}</label>
       </div>
       {% endif %}
       {%endfor%}
@@ -26,7 +26,7 @@
     {%endfor%}
     <div class="mt-3 mb-3 d-flex justify-content-end">
       <a href="/" id="cancel" name="cancel" class="btn btn-outline-primary">Cancel</a>
-      <button class="ms-2 btn btn-outline-primary" >Submit</button>
+      <button class="ms-2 btn btn-outline-primary">Submit</button>
     </div>
   </form>
 
