--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -20,27 +20,27 @@
         <form action="/new_question" method="post" class="rounded p-3 text-dark">
           <div class="mb-3 ">
             <label for="exampleInputEmail1" class="form-label">Question</label>
-            <textarea class="form-control" name="pregunta"  rows="3" required></textarea>
+            <textarea class="form-control" name="question"  rows="3" minlength="15" required></textarea>
           </div>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Correct Answer</label>
-            <input type="text" class="form-control" name="respuesta_correcta" required>
+            <input type="text" class="form-control" name="answer_true" required>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Fake Answer1</label>
-            <input type="text" class="form-control" name="respuesta_falsa1" required>
+            <input type="text" class="form-control" name="answer_false1" required>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Fake Answer2</label>
-            <input type="text" class="form-control" name="respuesta_falsa2" required>
+            <input type="text" class="form-control" name="answer_false2" required>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Fake Answer3</label>
-            <input type="text" class="form-control" name="respuesta_falsa3">
+            <input type="text" class="form-control" name="answer_false3">
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Fake Answer4</label>
-            <input type="text" class="form-control" name="respuesta_falsa4">
+            <input type="text" class="form-control" name="answer_false4">
           </div>
           <div class="d-flex justify-content-end">
             <a href="/" id="cancel" name="cancel" class="btn btn-outline-primary">Cancel</a>
